Implemented dispatcher workorder, assignment and technicians